--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/* Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
+
+/* Styling */
 * {
-    font-family:'Courier New', Courier, monospace;
+    font-family: 'Varela Round', sans-serif;
 }
